--- a/App.config
+++ b/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="Hakimov41Entities" connectionString="metadata=res://*/HakimovModel.csdl|res://*/HakimovModel.ssdl|res://*/HakimovModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=STUD231-9\SQLEXPRESS;initial catalog=Hakimov41;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Hakimov41Entities1" connectionString="metadata=res://*/HakimovModel.csdl|res://*/HakimovModel.ssdl|res://*/HakimovModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=STUD231-9\SQLEXPRESS;initial catalog=Hakimov41;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
